--- a/Adisyonum/Storyboard/Base.lproj/Main.storyboard
+++ b/Adisyonum/Storyboard/Base.lproj/Main.storyboard
@@ -200,14 +200,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JHz-OH-WFQ">
-                                                    <rect key="frame" x="56" y="49.5" width="8" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="54" y="45" width="12" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Garson Adı" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g8D-0H-kAZ">
-                                                    <rect key="frame" x="38.5" y="34.5" width="43.5" height="10"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                                    <rect key="frame" x="33.5" y="5" width="53" height="12"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -217,19 +217,39 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nrz-ka-auE">
+                                                    <rect key="frame" x="60" y="60" width="0.0" height="0.0"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dXk-ij-uVF" userLabel="MenuAc">
+                                                    <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
+                                                    <connections>
+                                                        <action selector="buttonMenuAc:" destination="eTq-je-0Nb" eventType="touchUpInside" id="pSr-7S-zwh"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="JHz-OH-WFQ" firstAttribute="centerY" secondItem="2wC-3c-NFO" secondAttribute="centerY" id="6Pi-8M-6bT"/>
                                                 <constraint firstAttribute="trailing" secondItem="doU-4k-6sd" secondAttribute="trailing" constant="5" id="72U-gf-QrL"/>
+                                                <constraint firstItem="dXk-ij-uVF" firstAttribute="leading" secondItem="2wC-3c-NFO" secondAttribute="leading" id="M6z-DC-nBN"/>
+                                                <constraint firstAttribute="trailing" secondItem="dXk-ij-uVF" secondAttribute="trailing" id="SIf-9x-I01"/>
                                                 <constraint firstAttribute="bottom" secondItem="doU-4k-6sd" secondAttribute="bottom" constant="5" id="Wmu-Ar-FNC"/>
+                                                <constraint firstAttribute="bottom" secondItem="dXk-ij-uVF" secondAttribute="bottom" id="XJL-hm-uw8"/>
+                                                <constraint firstItem="dXk-ij-uVF" firstAttribute="top" secondItem="2wC-3c-NFO" secondAttribute="top" id="Yf9-wz-Ycj"/>
+                                                <constraint firstItem="g8D-0H-kAZ" firstAttribute="top" secondItem="2wC-3c-NFO" secondAttribute="top" constant="5" id="dQj-by-Gw9"/>
                                                 <constraint firstItem="JHz-OH-WFQ" firstAttribute="centerX" secondItem="2wC-3c-NFO" secondAttribute="centerX" id="dmE-Fd-Cl3"/>
-                                                <constraint firstItem="g8D-0H-kAZ" firstAttribute="centerX" secondItem="2wC-3c-NFO" secondAttribute="centerX" id="mbb-c7-STy"/>
-                                                <constraint firstItem="JHz-OH-WFQ" firstAttribute="top" secondItem="g8D-0H-kAZ" secondAttribute="bottom" constant="5" id="vs0-Nl-IhZ"/>
+                                                <constraint firstItem="nrz-ka-auE" firstAttribute="centerY" secondItem="2wC-3c-NFO" secondAttribute="centerY" id="tOW-J4-868"/>
+                                                <constraint firstItem="g8D-0H-kAZ" firstAttribute="centerX" secondItem="2wC-3c-NFO" secondAttribute="centerX" id="uhE-3x-zdh"/>
+                                                <constraint firstItem="nrz-ka-auE" firstAttribute="centerX" secondItem="2wC-3c-NFO" secondAttribute="centerX" id="wmA-cH-rYO"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="120" height="120"/>
                                         <connections>
+                                            <outlet property="buttonMenuAc" destination="dXk-ij-uVF" id="5Io-oy-z6Y"/>
                                             <outlet property="labelGarsonAd" destination="g8D-0H-kAZ" id="MWp-Bn-Qez"/>
+                                            <outlet property="labelGizliMasaId" destination="nrz-ka-auE" id="bEK-w9-Xmg"/>
                                             <outlet property="labelHesap" destination="doU-4k-6sd" id="VB6-Rc-gOm"/>
                                             <outlet property="labelMasaNo" destination="JHz-OH-WFQ" id="V37-jN-OKf"/>
                                         </connections>
@@ -316,7 +336,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MbU-oI-aYA">
-                                                    <rect key="frame" x="633" y="10" width="24" height="24"/>
+                                                    <rect key="frame" x="609" y="-2" width="48" height="48"/>
                                                     <state key="normal" image="menu_siyah"/>
                                                     <connections>
                                                         <action selector="buttonMenuAc:" destination="lrl-VJ-pIv" eventType="touchUpInside" id="IId-Jb-3KK"/>
@@ -390,7 +410,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J05-v8-gIT">
-                                        <rect key="frame" x="627" y="5" width="24" height="24"/>
+                                        <rect key="frame" x="603" y="-7" width="48" height="48"/>
                                         <state key="normal" image="menu"/>
                                         <connections>
                                             <action selector="buttonToolbarMenuAc:" destination="Miu-qM-1os" eventType="touchUpInside" id="xZz-eR-3Fc"/>
@@ -433,7 +453,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8zr-aj-Cso" userLabel="MenuAc">
-                                                    <rect key="frame" x="633" y="10" width="24" height="24"/>
+                                                    <rect key="frame" x="609" y="-2" width="48" height="48"/>
                                                     <state key="normal" image="menu_siyah"/>
                                                     <connections>
                                                         <action selector="buttonMenuAc:" destination="QK3-6Z-YmP" eventType="touchUpInside" id="PE9-tP-FUC"/>
@@ -631,7 +651,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cOc-SM-5uH">
-                                                    <rect key="frame" x="633" y="10" width="24" height="24"/>
+                                                    <rect key="frame" x="609" y="-2" width="48" height="48"/>
                                                     <state key="normal" image="menu_siyah"/>
                                                     <connections>
                                                         <action selector="buttonMenuAc:" destination="6fZ-ln-Kyb" eventType="touchUpInside" id="NYH-B2-huN"/>
@@ -750,14 +770,14 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PRo-kg-0hH">
-                                                    <rect key="frame" x="633" y="10" width="24" height="24"/>
+                                                    <rect key="frame" x="609" y="-2" width="48" height="48"/>
                                                     <state key="normal" image="menu_siyah"/>
                                                     <connections>
                                                         <action selector="buttonMenuAc:" destination="hz1-fP-w32" eventType="touchUpInside" id="mXf-nl-YYK"/>
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ürün Fiyat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cdT-ZM-X8C">
-                                                    <rect key="frame" x="542.5" y="13" width="70.5" height="18"/>
+                                                    <rect key="frame" x="518.5" y="13" width="70.5" height="18"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -872,7 +892,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LJu-hw-1E1">
-                                        <rect key="frame" x="633" y="5" width="24" height="24"/>
+                                        <rect key="frame" x="609" y="-7" width="48" height="48"/>
                                         <state key="normal" image="menu"/>
                                         <connections>
                                             <action selector="buttonDropDownMenu:" destination="HAM-k6-rHQ" eventType="touchUpInside" id="ASu-Nw-Mt9"/>
@@ -1308,7 +1328,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SJ3-ch-KWU">
-                                                    <rect key="frame" x="643" y="10" width="24" height="24"/>
+                                                    <rect key="frame" x="619" y="-2" width="48" height="48"/>
                                                     <state key="normal" image="menu_siyah"/>
                                                     <connections>
                                                         <action selector="buttonMenuAc:" destination="NHU-ef-cJc" eventType="touchUpInside" id="FiW-BR-ddD"/>
