--- a/Adisyonum/Storyboard/Base.lproj/Main.storyboard
+++ b/Adisyonum/Storyboard/Base.lproj/Main.storyboard
@@ -177,7 +177,7 @@
         <!--KasaVC-->
         <scene sceneID="S0B-PL-fBx">
             <objects>
-                <viewController modalTransitionStyle="flipHorizontal" id="JEC-24-OBX" customClass="KasaVC" customModule="Adisyonum" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalTransitionStyle="flipHorizontal" modalPresentationStyle="fullScreen" id="JEC-24-OBX" customClass="KasaVC" customModule="Adisyonum" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sjo-9u-zav">
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -330,6 +330,7 @@
                         <outlet property="collectionViewMasalar" destination="FbV-8P-Fpf" id="qAh-w4-Ahm"/>
                         <outlet property="viewSideMenu" destination="wzl-U8-m5I" id="rPJ-0n-cRq"/>
                         <outlet property="viewSideMenuLeftConstraint" destination="Oge-HF-YbB" id="wcQ-sY-opw"/>
+                        <segue destination="uoZ-hy-nel" kind="presentation" identifier="kasaVCtoAnlikRaporlarVC" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="guG-1P-avr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="285-83-wWE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -340,6 +341,101 @@
                 </panGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="136.28185907046478" y="970.39999999999998"/>
+        </scene>
+        <!--Anlik RaporalarVC-->
+        <scene sceneID="Zrv-OD-xPy">
+            <objects>
+                <viewController modalTransitionStyle="crossDissolve" id="uoZ-hy-nel" customClass="AnlikRaporalarVC" customModule="Adisyonum" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XYO-E7-wis">
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="nI8-BL-ys8">
+                                <rect key="frame" x="80" y="20" width="85" height="335"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nakit:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M2S-ha-jz1">
+                                        <rect key="frame" x="0.0" y="0.0" width="44.5" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kredi Kartı:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oBO-85-41R">
+                                        <rect key="frame" x="0.0" y="44" width="85" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Multinet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4p7-1V-is4">
+                                        <rect key="frame" x="0.0" y="88" width="62.5" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ticket" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LUv-0R-7KK">
+                                        <rect key="frame" x="0.0" y="132" width="47" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sodexo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6uB-AV-ste">
+                                        <rect key="frame" x="0.0" y="176" width="57" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Setcard" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOw-kv-aXr">
+                                        <rect key="frame" x="0.0" y="220" width="59.5" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Metropol" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MVi-Gm-LGd">
+                                        <rect key="frame" x="0.0" y="264" width="69" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Toplam:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zmB-el-RmC">
+                                        <rect key="frame" x="0.0" y="308" width="68" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sEL-eO-O1F">
+                                <rect key="frame" x="10" y="10" width="21" height="22"/>
+                                <color key="tintColor" name="colorPrimaryDark"/>
+                                <state key="normal" image="arrowshape.turn.up.left" catalog="system"/>
+                                <connections>
+                                    <action selector="buttonGeri:" destination="uoZ-hy-nel" eventType="touchUpInside" id="a6A-vZ-0s6"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="sEL-eO-O1F" firstAttribute="leading" secondItem="AYe-cs-HrG" secondAttribute="leading" constant="10" id="056-CW-Xsa"/>
+                            <constraint firstItem="nI8-BL-ys8" firstAttribute="top" secondItem="AYe-cs-HrG" secondAttribute="top" constant="20" id="I4i-t5-OdH"/>
+                            <constraint firstItem="AYe-cs-HrG" firstAttribute="bottom" secondItem="nI8-BL-ys8" secondAttribute="bottom" constant="20" id="LLN-dT-9ha"/>
+                            <constraint firstItem="nI8-BL-ys8" firstAttribute="leading" secondItem="AYe-cs-HrG" secondAttribute="leading" constant="80" id="g36-jt-mNc"/>
+                            <constraint firstItem="sEL-eO-O1F" firstAttribute="top" secondItem="AYe-cs-HrG" secondAttribute="top" constant="10" id="gHy-4u-m8S"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="AYe-cs-HrG"/>
+                    </view>
+                    <connections>
+                        <outlet property="labelKrediKarti" destination="oBO-85-41R" id="L5r-bE-OFA"/>
+                        <outlet property="labelMetropol" destination="MVi-Gm-LGd" id="dJB-fB-TpJ"/>
+                        <outlet property="labelMultinet" destination="4p7-1V-is4" id="mih-tU-O3n"/>
+                        <outlet property="labelNakit" destination="M2S-ha-jz1" id="WVb-Ys-5uy"/>
+                        <outlet property="labelSetcard" destination="vOw-kv-aXr" id="rf5-Oa-hLY"/>
+                        <outlet property="labelSodexo" destination="6uB-AV-ste" id="bt9-HE-Crc"/>
+                        <outlet property="labelTicket" destination="LUv-0R-7KK" id="EDe-u0-Aql"/>
+                        <outlet property="labelToplam" destination="zmB-el-RmC" id="5pu-88-Vc6"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AbT-aN-kdE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-284" y="2031"/>
         </scene>
         <!--Garsonlar-->
         <scene sceneID="vL4-U6-nYh">
